# Nexusfi_mono

./: Readme.md
contracts/: temp.json
contracts/factory/: Cargo.toml
contracts/factory/src/: deploy.rs  lib.rs
contracts/factory/src/indexes-contract/: indexes.wasm
contracts/factory/src/token/: token.wasm
contracts/indexes/: Cargo.toml  README.md
contracts/indexes/src/: lib.rs
contracts/indexes/tests/: test_basics.rs
contracts/token/: Cargo.toml  README.md
contracts/token/scripts/: package.json  pnpm-lock.yaml
contracts/token/src/: lib.rs  models.rs  signer.rs
contracts/usdc_deposit/: Cargo.toml  README.md
contracts/usdc_deposit/src/: lib.rs
frontend/: README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Card.tsx  ConfirmationModal.tsx  CreateIndexModal.tsx  Features.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx
frontend/src/hooks/: debounce.tsx  useFetchAssets.tsx
frontend/src/lib/: ethereum.ts  getEvmAddress.tsx  getStats.ts
frontend/src/wallets/: near.ts
nexus_fi/src/: config.ts  types.ts
nexus_fi/src/app/earn/: page.tsx
nexus_fi/src/components/: ConfirmationModal.tsx  LogoTicker.tsx  Roadmap.tsx
nexus_fi/src/hooks/: useGetFunds.tsx
nexus_fi/src/lib/: decodeResult.ts  getStats.ts  kdf.ts
nexus_fi/src/wallets/: web3modal.tsx
