[package]
name = "token"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.11.0-rust-1.82.0"
image_digest = "sha256:6af67e796ff7182f6b184031f9e95d792f97b66693698abc51b4630acac0bf83"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = "5.4"
near-contract-standards = "5.4.0"  # Updated to match near-sdk version
once_cell = "1.18" 
omni-transaction = { git = "https://github.com/edsonalcala/omni-transaction-rs.git", branch = "development" }
hex = "0.4"


[dev-dependencies]
near-sdk = { version = "5.4.0" }  # Match the main dependency version
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.9.3"
borsh-derive = "0.9.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true